Add LDAP API endpoints
